Feat: 이미지를 base64로 인코딩하여 클라이언트로 전송
